Quorum3/Library/Tests/Inheritance/Pass/ParentWithFields.quorum
class ParentWithFields 
    integer bob = 0
    
end