Quorum3/Library/Tests/Inheritance/Fail/InvalidVariableName.quorum
class InvalidVariableName 
    text alice = ""
    text bob = ""
end